--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 /node_modules
 /.pnp
 .pnp.js
-
 # testing
 /coverage
 
@@ -17,6 +16,10 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env
+.env.local
+.env.production
+.env.development
 
 npm-debug.log*
 yarn-debug.log*
